1. some name changes 2. changed date format to be more readible 3. allows for more than one words per day

--- a/popup.html
+++ b/popup.html
@@ -5,10 +5,13 @@
         <title></title>
     </head>
     <body>
-        <button id="b1">Get saved words!</button>
+        <button id="save">Save selected words</button>
+        <button id="get">Get saved words!</button>
+        <button id="clear">Clear storage</button>
         <div id="output"></div>
 
-        <script src="getword.js"></script>
-        <script src="selection.js"></script>
+        <script src="get.js"></script>
+        <script src="save.js"></script>
+        <script src="clear.js"></script>
     </body>
 </html>
