--- a/popup.html
+++ b/popup.html
@@ -1,14 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <link rel="stylesheet" type="text/css" href="popup.css">
         <meta charset="UTF-8">
         <title></title>
     </head>
     <body>
-        <button id="clear">Clear storage</button>
-        <div id="output"></div>
+        <div id="flexbox">
+            <div id="outputHeader"></div>
+            <div id="calendar">
+                <div id="heading"></div>
+                <div id="dates"></div>
+            </div>
+        </div>
+        <ul id="wordList"></ul>
 
-        <script src="get.js"></script>
+        <button id="clear">Clear storage</button>
+
         <script src="clear.js"></script>
+        <script src="popup.js"></script>
     </body>
 </html>
