1. added navigation bar 2. added a listview of stored words

--- a/popup.html
+++ b/popup.html
@@ -6,6 +6,10 @@
         <title></title>
     </head>
     <body>
+        <div id="navigation">
+            <div id="calendarTab">Calendar</div>
+            <div id="listTab">List</div>
+        </div>
         <div id="flexbox">
             <div id="outputHeader"></div>
             <div id="calendar">
@@ -14,6 +18,7 @@
             </div>
         </div>
         <ul id="wordList"></ul>
+        <ul id="listView"></ul>
 
         <button id="clear">Clear storage</button>
 
