1. Added formatting for the on page button 2. Added a scroll bar to the extension when there are too many words 3. store lowercase letters only

--- a/popup.html
+++ b/popup.html
@@ -17,6 +17,7 @@
                 <div id="dates"></div>
             </div>
         </div>
+        <div id="wordListTitle"></div>
         <ul id="wordList"></ul>
         <ul id="listView"></ul>
 
