1. Added formatting to clear all button 2. Reload the views when clicking the clear all button

--- a/popup.html
+++ b/popup.html
@@ -21,7 +21,7 @@
         <ul id="wordList"></ul>
         <ul id="listView"></ul>
 
-        <button id="clear">Clear storage</button>
+        <button id="clear">Clear All</button>
 
         <script src="clear.js"></script>
         <script src="popup.js"></script>
