1. grayed out all dates without words

--- a/popup.html
+++ b/popup.html
@@ -25,6 +25,13 @@
             <input type="text" id="search" placeholder="Search..">
             <ul id="listView"></ul>
             <button id="clear">Clear All</button>
+
+            <div id="alert">
+                <div><strong>Notice!</strong> You cannot recover your words once deleted.</div>
+                <button id="confirm" class="alertButtons">Confirm</button>
+                <button id="cancel" class="alertButtons">Cancel</button>
+            </div>
+
         </div>  
         <script src="clear.js"></script>
         <script src="popup.js"></script>
